tambahan tombol jump

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Flappy Bird</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Flappy Bird - Salman Edition</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   </head>
   <body>
     <h1>Flappy Bird</h1>
-    <p>Click atau Tekan SPACE untuk Terbang</p>
+    <p>Gunakan Spasi atau Tombol JUMP</p>
 
     <div class="game-container">
       <canvas id="gameCanvas" width="400" height="600"></canvas>
+
+      <button id="jumpBtnMobile">JUMP</button>
 
       <div id="gameOverPopup" class="popup hidden">
         <h2>Game Over</h2>
@@ -24,6 +24,10 @@
         <button id="retryBtn">Retry</button>
       </div>
     </div>
+
+    <audio id="soundFly" src="assets/fly.mp3"></audio>
+    <audio id="soundScore" src="assets/score.mp3"></audio>
+    <audio id="soundDie" src="assets/die.mp3"></audio>
 
     <script src="script.js"></script>
   </body>
